# fastAPI_lms

./: README.md  main.py  pyproject.toml  requirements.txt
api/: .gitignore  courses.py  sections.py  users.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
