[tool.poetry]
name = "lms"
version = "0.1.0"
description = ""
authors = ["adeelahmadrasheed-sqa <adeel.ahmad@aiodevstaging.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
